name:                backend
version:             0.1.0.0
github:              "isaac025/backend"
license:             GPL-3.0
author:              "Isaac Hiram Lopez Diaz"
maintainer:          "isaac.lopez@upr.edu"
copyright:           "2021 Isaac Hiram Lopez Diaz"
cabal-version: 	     >= 1.10

extra-source-files:  README.org
		   , Backlog.org

library
  exposed-modules:     Lib
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
	 	     , aeson
	             , servant-server
		     , wai
		     , warp

executable backend
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , backend
  default-language:    Haskell2010

test-suite backend-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , backend
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

